Fixed contextual commands wrapping.

--- a/src/themes/designer/styles/toolboxes.scss
+++ b/src/themes/designer/styles/toolboxes.scss
@@ -40,6 +40,7 @@ h2 {
 
     &.toolbox-context {
         padding: 0;
+        white-space: nowrap;
 
         .toolbox-splitter {
             width: 1px;
